Fix compatibility with older JDK
Signed-off-by: David Zane <38449481+dzane17@users.noreply.github.com>